--- a/requirements_ALL.txt
+++ b/requirements_ALL.txt
@@ -24,8 +24,10 @@ Flask-Gravatar==0.5.0
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+greenlet==2.0.2
 gunicorn==20.1.0
 idna==2.10
+importlib-metadata==6.6.0
 ipykernel==5.5.5
 ipython==7.24.0
 ipython-genutils==0.2.0
@@ -68,9 +70,11 @@ terminado==0.10.0
 testpath==0.5.0
 tornado==6.1
 traitlets==5.0.5
+typing-extensions==4.5.0
 urllib3==1.25.10
 visitor==0.1.3
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
 WTForms==2.3.3
+zipp==3.15.0
